--- a/DatingApp-Frontend/src/app/app.component.html
+++ b/DatingApp-Frontend/src/app/app.component.html
@@ -1,6 +1,5 @@
-<div>
-  <h1>
-    Welcome to {{title}}
-  </h1>
-  <app-value></app-value>
-</div>
+<app-header></app-header>
+
+<app-home></app-home>
+
+
